--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Cheffin</title>
   </head>
   <body>
-    <h1>Cheffin</h1>
+    <div style = "background-color: #e8dcca">
+      <h1 style = padding: 15px>Cheffin</h1>
+    </div>
     <script src="testing.js"> </script>
   </body>
 </html>
