--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="stylesheet" href="https://use.typekit.net/jpp3pea.css">
     <meta charset="utf-8">
     <title>Cheffin</title>
+    <style>
+      .title {
+        font-family: bebas-neue, sans-serif;
+        font-weight: 400;
+        color: #df6e55;
+        font-size: 50px;
+        font-style: normal;
+      }
+    </style>
   </head>
   <body>
-    <div style = "background-color: #e8dcca">
-      <h1 style = padding: 15px>Cheffin</h1>
+    <div style = "background-color: #e8dcca; margin-top: -35px; width: 100vw;
+    height: 18vh">
+      <!-- <h1 class = "title" style = "padding-top: 4vh; text-align: center;">CHEFFIN</h1>
+ -->
+        <img src="images/logo.png" alt="Logo">
     </div>
     <script src="testing.js"> </script>
   </body>
