--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
       }
     </style>
   </head>
+  <script src="testing.js"> </script>
   <body>
     <div style = "background-color: #e8dcca; margin-top: -35px; width: 100vw;
     height: 18vh">
       <!-- <h1 class = "title" style = "padding-top: 4vh; text-align: center;">CHEFFIN</h1>
  -->
-        <img src="images/logo.png" alt="Logo">
+
     </div>
-    <script src="testing.js"> </script>
+      <img src= "logo.PNG" alt="Logo" width = "100px">
   </body>
 </html>
