--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
   </head>
   <script src="testing.js"> </script>
   <body>
-    <div style = "background-color: #e8dcca; margin-top: -35px; width: 100vw;
+    <div style = "background-color: #e8dcca; width: 100vw;
     height: 22vh">
       <!-- <h1 class = "title" style = "padding-top: 4vh; text-align: center;">CHEFFIN</h1>
  -->
-    <center><img src= "logo.png" alt="Logo" width = "300px" style = "margin-top: -7.5vh;"></center>
+    <center><img src= "logo.png" alt="Logo" width = "300px"></center>
 
     </div>
   </body>
