--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div style = "background-color: #e8dcca; margin-top: -35px; width: 100vw;
     height: 22vh">
-    <center><img src= "logo.png" alt="Logo" width = "300px" style = "margin-top: -7.5vh;"></center>
+    <center><img src= "logo.png" alt="Logo" width = "300px"></center>
 
     </div>
   </body>
