--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link rel="stylesheet" href="https://use.typekit.net/jpp3pea.css">
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cheffin</title>
     <style>
       .title {
-        font-family: bebas-neue, sans-serif;
-        font-weight: 400;
-        color: #df6e55;
-        font-size: 50px;
-        font-style: normal;
+
       }
     </style>
   </head>
@@ -18,8 +14,6 @@
   <body>
     <div style = "background-color: #e8dcca; margin-top: -35px; width: 100vw;
     height: 22vh">
-      <!-- <h1 class = "title" style = "padding-top: 4vh; text-align: center;">CHEFFIN</h1>
- -->
     <center><img src= "logo.png" alt="Logo" width = "300px" style = "margin-top: -7.5vh;"></center>
 
     </div>
