--- a/index.html
+++ b/index.html
@@ -16,12 +16,8 @@
   </head>
   <script src="testing.js"> </script>
   <body>
-    <div style = "background-color: #e8dcca; width: auto;
-    height: 200px>
-      <!-- <h1 class = "title" style = "padding-top: 4vh; text-align: center;">CHEFFIN</h1>
- -->
+    <div style = "background-color: #e8dcca; width: 100vw; height: 22vh">
     <center><img src= "logo.png" alt="Logo" width = "300px"></center>
-
     </div>
   </body>
 </html>
