--- a/index.html
+++ b/index.html
@@ -6,40 +6,14 @@
     <meta charset="utf-8">
     <title>Cheffin</title>
     <style>
-      .title {
-        font-family: bebas-neue, sans-serif;
-        font-weight: 400;
-        color: #df6e55;
-        font-size: 50px;
-        font-style: normal;
-      }
+
     </style>
   </head>
   <script src="testing.js"> </script>
   <body>
     <div style = "background-color: #e8dcca; width: 100vw; height: 22vh">
-    <center><img src= "logo.png" alt="Logo" width = "300px"></center>
+    <center><img src= "logo.png" alt="Logo" width = "300px" style = "margin-top: -7.5vh;"></center>
     </div>
   </body>
 </html>
-=======
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <link rel="stylesheet" href="https://use.typekit.net/jpp3pea.css">
-    <meta charset="utf-8">
-    <title>Cheffin</title>
-    <style>
-      
-    </style>
-  </head>
-  <script src="testing.js"> </script>
-  <body>
-    <div style = "background-color: #e8dcca; width: 100vw;
-    height: 22vh"
-    <center><img src= "logo.png" alt="Logo" width = "300px"></center>
 
-    </div>
-  </body>
-</html>
->>>>>>> 597e191f648a61d7d248761a9f5c64024b77b206
