--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
   </head>
   <script src="testing.js"> </script>
   <body>
-    <div style = "background-color: #e8dcca; width: 100vw; height: 22vh">
-    <center><img src= "logo.png" alt="Logo" width = "300px" style = "margin-top: -8.5vh;"></center>
+    <div style = "background-color: #e8dcca; margin-top: -30px; width: 100vw; height: 22vh">
+    <center><img src= "logo.png" alt="Logo" width = "300px" style = "margin-top: -8.3vh;"></center>
     </div>
   </body>
 </html>
-
