--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script src="testing.js"> </script>
   <body>
     <div style = "background-color: #e8dcca; margin-top: -30px; width: 100vw; height: 22vh">
-    <center><img src= "logo.png" alt="Logo" width = "300px" style = "margin-top: -8.3vh;"></center>
+    <center><img src= "logo.png" alt="Logo" width = "300px"></center>
     </div>
   </body>
 </html>
