--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <meta charset="utf-8">
     <title>Cheffin</title>
     <style>
-
     </style>
   </head>
   <script src="testing.js"> </script>
-  <body>
-    <div style = "background-color: #e8dcca; margin-top: -30px; width: 100vw; height: 22vh">
-    <center><img src= "logo.png" alt="Logo" width = "300px"></center>
+  <body style = "margin: 0;">
+    <div style = "background-color: #e8dcca; width: 100vw; height: 22vh">
+    <center><img src= "logo.png" alt="Logo" width = "17%" style = "padding-top: 2%"></center>
     </div>
   </body>
 </html>
