--- a/index.html
+++ b/index.html
@@ -1,21 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="stylesheet" href="https://use.typekit.net/jpp3pea.css">
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cheffin</title>
     <style>
-      .title {
-
-      }
     </style>
   </head>
   <script src="testing.js"> </script>
-  <body>
-    <div style = "background-color: #e8dcca; margin-top: -35px; width: 100vw;
-    height: 22vh">
-    <center><img src= "logo.png" alt="Logo" width = "300px" style = "margin-top: -7.5vh;"></center>
-
+  <body style = "margin: 0;">
+    <div style = "background-color: #e8dcca; width: 100vw; height: 22vh">
+    <center><img src= "logo.png" alt="Logo" width = "17%" style = "padding-top: 2%"></center>
     </div>
   </body>
 </html>
